@@ -5,7 +5,7 @@ DIST sndio-0_p20120925.tar.bz2 108604 SHA256 09424042e53a29996615edb242ec264a024
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlBiJU0ACgkQknrdDGLu8JDrNwD/UIiQsNEyQVuxquG4YtEmIq8h
-TEJXsQiCNKOZthBiL5gA/2w4NE0feH/mi0ubfxx/ZoJKxRTh3y2uvCiXW7OC+xfC
-=Sk73
+iF4EAREIAAYFAlC+KnwACgkQknrdDGLu8JD38gD/WI9TSbUraP5oahB9is1iFNOM
+FAtJ6X2otMHsT1ZNtDkA/A4vk3Hdp7ACSPgflxGqikZYO8jOhdrxuRmLDJOBEaar
+=TSXJ
 -----END PGP SIGNATURE-----
